--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Jekyll Config
 # --------------------
 baseurl: ""
-url: ""
+url: "https://wa-canyons.github.io/"
 permalink: pretty
 markdown: kramdown
 highlighter: rouge
