--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ fonts:
   logo: "DM Sans"
 
 logo:
-  logo_text: "Jekyll Curate"
+  logo_text: "   "
   logo_image: assets/images/logo/logo.png
   logo_image_mobile: assets/images/logo/logo-mobile.png
   logo_image_invert: assets/images/logo/logo-invert.png
@@ -153,11 +153,11 @@ menu:
 
 footer:
   enable_footer: true # show/hide the entire footer
-  footer_title: "Jekyll Curate"
-  footer_description: "Curate is a creative portfolio for Jekyll by Zerostatic Themes."
+  footer_title: "follow our science"
+  footer_description: "main lab webpage at https://sites.uw.edu/sediment/home/"
   enable_social_media_icons: true
   enable_contact_details: false
-  enable_menu_footer_primary: true
+  enable_menu_footer_primary: false
   enable_menu_footer_secondary: true
   enable_menu_footer_tertiary: false
   footer_primary_menu_title: "Product"
@@ -167,5 +167,4 @@ footer:
 bottom:
   enable_bottom: false # show/hide the entire bottom (below the footer)
   enable_bottom_menu: false # if enabled, the bottom menu can be edited in `_data/menu.yml`
-  copyright_text: "© 2021 Zerostatic Themes"
-
+  copyright_text: "© 2021 UW sediment dynamics lab"
