--- a/_config.yml
+++ b/_config.yml
@@ -118,10 +118,10 @@ logo:
   show_logo_text_on_desktop: false
   
 seo:
-  meta_opengraph_type: "website"
-  meta_twitter_card: "summary"
-  meta_twitter_site: "@zerostaticio"
-  meta_twitter_creator: "@zerostaticio"
+  meta_opengraph_type: 
+  meta_twitter_card: 
+  meta_twitter_site: 
+  meta_twitter_creator: 
 
 header: 
   fixed: false
@@ -153,18 +153,18 @@ menu:
 
 footer:
   enable_footer: true # show/hide the entire footer
-  footer_title: "follow our science"
-  footer_description: "main lab webpage at https://sites.uw.edu/sediment/home/"
+  footer_title: "follow our other projects"
+  footer_description: "lab webpage: https://sites.uw.edu/sediment/home/"
   enable_social_media_icons: true
   enable_contact_details: false
   enable_menu_footer_primary: false
   enable_menu_footer_secondary: true
   enable_menu_footer_tertiary: false
-  footer_primary_menu_title: "Product"
-  footer_secondary_menu_title: "Company"
-  footer_tertiary_menu_title: "Other"
+  footer_primary_menu_title: 
+  footer_secondary_menu_title:  
+  footer_tertiary_menu_title:  
 
 bottom:
-  enable_bottom: false # show/hide the entire bottom (below the footer)
+  enable_bottom: true # show/hide the entire bottom (below the footer)
   enable_bottom_menu: false # if enabled, the bottom menu can be edited in `_data/menu.yml`
   copyright_text: "© 2021 UW sediment dynamics lab"
