--- a/_config.yml
+++ b/_config.yml
@@ -144,7 +144,7 @@ mailchimp:
 contact_form: 
   use_netlify_form: false
   use_formspree_form: true
-  formspree_endpoint: https://formspree.io/f/moqyklqv
+  formspree_endpoint: https://formspree.io/f/maygbjvj
   netlify_form_name: "contact"
 
 menu: 
