--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -6,25 +6,17 @@ main:
     url: /projects/
     weight: 2
     child:
-      - name: "Project Layout 1"
-        icon: "/assets/images/icons/wireframe-7.svg"
-        icon_darkmode: "/assets/images/icons/wireframe-7-white.svg"
-        description: "Default Project layout"
+      - name: "Current synchroneity"
+        description: "is near-bed current structure synchronous?"
         url: /projects/project-1/
-      - name: "Project Layout 2"
-        icon: "/assets/images/icons/wireframe-5.svg"
-        icon_darkmode: "/assets/images/icons/wireframe-5-white.svg"
-        description: "Right side layout"
+      - name: "Sediment-gravity flows"
+        description: "can storms produce SGFs?"
         url: /projects/project-2/
-      - name: "Project Layout 3"
-        icon: "/assets/images/icons/wireframe-6.svg"
-        icon_darkmode: "/assets/images/icons/wireframe-6-white.svg"
-        description: "Left side layout"
+      - name: "Turbidite deposits"
+        description: "are nonseismic turbidites present in cores?"
         url: /projects/project-3/
-      - name: "Project Layout 4"
-        icon: "/assets/images/icons/wireframe-8.svg"
-        icon_darkmode: "/assets/images/icons/wireframe-8-white.svg"
-        description: "Top layout"
+      - name: "Contrasting canyon morphology"
+        description: "do adjacent canyons infill similarly?"
         url: /projects/project-4/
   - name: Blog
     url: /blog/
@@ -48,21 +40,6 @@ footer_primary:
     url: /projects/project-4/
 
 footer_secondary:
-  - name: Blog
-    url: /blog/
-    weight: 2
-  - name: About
-    url: /about/
-    weight: 3
-  - name: Contact
-    url: /contact/
-    weight: 4
-  - name: Privacy Policy
-    url: /privacy-policy/
-    weight: 1
-  - name: Terms and Conditions
-    url: /terms-and-conditions/
-    weight: 2
 
 footer_tertiary:
   - name: Privacy Policy
